--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   -->
   <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
   <!-- 
-    - preload images 
+    - preload imag
   -->
   <link rel="preload" as="image" href="./assets/images/home-slide-1.jpg">
   <link rel="preload" as="image" href="./assets/images/home-slide-2.jpg">
@@ -204,11 +204,9 @@
 
       </nav>
 
-        <span class="text text-1">ES</span>
-
       </a>
 
-      <a href="https://cargosafe-webapp.vercel.app/sign-in" class="btn btn-secondary">
+      <a href="google.com" class="btn btn-secondary">
 
         <span class="text text-1">Go to App Web</span>
 
