fix(): add call action button

--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
           <ion-icon name="chevron-forward"></ion-icon>
         </button>
 
-        <a href="https://cargosafe-webapp.vercel.app/sign-in" class="hero-btn has-after">
+        <a href="google.com" class="hero-btn has-after">
           <img src="./assets/images/letsgo.png" width="48" height="48" alt="booking icon">
 
           <span class="label-2 text-center span">
