feat: add header and comments

--- a/index.html
+++ b/index.html
@@ -109,9 +109,10 @@
     </div>
   </div>
 
-   <!-- 
-    - #HEADER
-  -->
+<!--
+  Header section: incluye el logo y la navegación principal
+  Contiene el menú para moverse por las secciones de la página
+-->
 
   <header class="header" data-header>
     <div class="container">
